Fixed MaxWidthContainer and added black background that stretches entire width for ultrawide screens. Still need to add slideshow functionality.

--- a/src/components/ImageCarousel/ImageCarousel.scss
+++ b/src/components/ImageCarousel/ImageCarousel.scss
@@ -1,6 +1,9 @@
 @import '../../variables.scss';
 
 .image-carousel {
+    background-color: $Black;
+    padding: 1rem 0rem;
+
     .large-center-text {
         color: $White;
         text-align: right;
